--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -55,4 +55,6 @@
     <color name="black_8b">#8b8b8b</color>
     <color name="black_46">#465A67</color>
     <color name="white">#ffffff</color>
+    
+    <color name="transparent">#0000</color>
 </resources>
