--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,5 +15,6 @@
     <dimen name="wh_2dp">2dp</dimen>
     <dimen name="wh_10dp">10dp</dimen>
     <dimen name="wh_16dp">16dp</dimen>
+    <dimen name="wh_24dp">24dp</dimen>
 
 </resources>
