--- a/app/src/main/res/layout/list_item_image_new.xml
+++ b/app/src/main/res/layout/list_item_image_new.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<me.nereo.multi_image_selector.view.SquareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<base.image_selector.multi_image_selector.view.SquareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <me.nereo.multi_image_selector.view.SquaredImageView
+    <base.image_selector.multi_image_selector.view.SquaredImageView
         android:id="@+id/image"
         android:scaleType="centerInside"
         android:src="@drawable/default_error"
@@ -28,4 +28,4 @@
         android:background="@drawable/un_check_mark_oval"
         />
 
-</me.nereo.multi_image_selector.view.SquareFrameLayout>
+</base.image_selector.multi_image_selector.view.SquareFrameLayout>
