--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,8 @@
     <dimen name="wh_16dp">16dp</dimen>
     <dimen name="wh_24dp">24dp</dimen>
 
+    <dimen name="image_size">120dp</dimen>
+    <dimen name="space_size">2dp</dimen>
+    <dimen name="folder_cover_size">72dp</dimen>
+
 </resources>
