--- a/app/src/main/res/drawable/check_mark_oval.xml
+++ b/app/src/main/res/drawable/check_mark_oval.xml
@@ -2,6 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#4CAF50"/>
+    <solid android:color="?attr/colorPrimary"/>
+
+    <stroke android:width="@dimen/wh_1dp"
+        android:color="@color/white"/>
 
 </shape>
