--- a/app/src/main/res/drawable/un_check_mark_oval.xml
+++ b/app/src/main/res/drawable/un_check_mark_oval.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#88000000"/>
-    <stroke android:width="1dp"
-        android:color="#fff"/>
+    <solid android:color="@color/mask_black"/>
+    <stroke android:width="@dimen/wh_1dp"
+        android:color="@color/white"/>
 
 </shape>
