--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -15,7 +15,7 @@
         android:id="@+id/profile_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:src="@mipmap/lili"
+        android:src="@drawable/app_launture"
         app:civ_border_width="2dp"
         app:civ_border_color="#cdcdcd"/>
 
