--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/done"
+        android:id="@+id/edit_done"
         android:icon="@mipmap/ic_done_white"
         android:title="完成"
         app:showAsAction="ifRoom" />
