--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -5,8 +5,8 @@
         android:id="@+id/menu_id">
         <item
             android:id="@+id/nav_default"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="默认" />
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="健身" />
         <item
             android:id="@+id/nav_note"
             android:icon="@drawable/ic_menu_slideshow"
