--- a/app/src/main/res/layout/activity_strength.xml
+++ b/app/src/main/res/layout/activity_strength.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.beiing.lilinote.strength.StrengthActivity">
+    tools:context=".strength.activity.StrengthActivity">
 
     <include layout="@layout/toolbar_layout"/>
 
