--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -3,10 +3,7 @@
 
     <group android:checkableBehavior="single"
         android:id="@+id/menu_id">
-        <item
-            android:id="@+id/nav_default"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="健身" />
+
         <item
             android:id="@+id/nav_note"
             android:icon="@drawable/ic_menu_slideshow"
@@ -27,6 +24,11 @@
                 android:id="@+id/nav_setting"
                 android:icon="@drawable/ic_menu_manage"
                 android:title="设置" />
+
+            <item
+                android:id="@+id/nav_strength"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="健身" />
         </menu>
     </item>
 
