--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,8 @@
     <dimen name="wh_16dp">16dp</dimen>
     <dimen name="wh_24dp">24dp</dimen>
     <dimen name="wh_40dp">40dp</dimen>
+    <dimen name="wh_70dp">70dp</dimen>
+    <dimen name="wh_100dp">100dp</dimen>
 
 
     <dimen name="ts_12sp">12sp</dimen>
@@ -29,10 +31,35 @@
     <dimen name="ts_18sp">18sp</dimen>
     <dimen name="ts_20sp">20sp</dimen>
 
+    <!--全局-->
+    <dimen name="padding_margin_2dp">2dp</dimen>
+    <dimen name="padding_margin_4dp">4dp</dimen>
+    <dimen name="padding_margin_6dp">6dp</dimen>
+    <dimen name="padding_margin_8dp">8dp</dimen>
+    <dimen name="padding_margin_9dp">9dp</dimen>
+    <dimen name="padding_margin_10dp">10dp</dimen>
+    <dimen name="padding_margin_12dp">12dp</dimen>
+    <dimen name="padding_margin_14dp">14dp</dimen>
+    <dimen name="padding_margin_15dp">15dp</dimen>
+    <dimen name="padding_margin_16dp">16dp</dimen>
+    <dimen name="padding_margin_18dp">18dp</dimen>
+    <dimen name="padding_margin_20dp">20dp</dimen>
+    <dimen name="padding_margin_22dp">22dp</dimen>
+    <dimen name="padding_margin_24dp">24dp</dimen>
+    <dimen name="padding_margin_26dp">26dp</dimen>
+    <dimen name="padding_margin_28dp">28dp</dimen>
+    <dimen name="padding_margin_30dp">30dp</dimen>
+    <dimen name="padding_margin_32dp">32dp</dimen>
+    <dimen name="padding_margin_42dp">42dp</dimen>
+
 
     <dimen name="image_size">120dp</dimen>
     <dimen name="space_size">2dp</dimen>
     <dimen name="folder_cover_size">72dp</dimen>
+
+
+    <!--divider 边框 宽度-->
+    <dimen name="width_line_divider">0.7dp</dimen>
 
 
 </resources>
