--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -8,10 +8,9 @@
 
     <include layout="@layout/toolbar_layout"/>
 
-    <ScrollView
+    <com.beiing.baseframe.widgets.ElasticLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,9 +22,7 @@
                 android:layout_height="wrap_content"
                 android:text="通用设置"
                 android:textColor="?attr/colorPrimary"
-                android:layout_margin="@dimen/wh_14dp"/>
-
-            <include layout="@layout/view_line"/>
+                android:layout_margin="@dimen/wh_14dp" />
 
             <com.balysv.materialripple.MaterialRippleLayout
                 android:id="@+id/mrl_change_theme"
@@ -34,9 +31,10 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 app:mrl_rippleOverlay="true"
                 app:mrl_rippleColor="?attr/colorPrimary"
+                android:background="@drawable/border_top_and_bottom"
                 >
                 <TextView
-                    android:id="@+id/tv_setting"
+                    android:id="@+id/tv_change_theme"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="更换主题"
@@ -45,7 +43,6 @@
                     android:layout_margin="@dimen/wh_14dp"
                     />
             </com.balysv.materialripple.MaterialRippleLayout>
-            <include layout="@layout/view_line"/>
 
 
                 <LinearLayout
@@ -79,10 +76,39 @@
                         android:background="@mipmap/ic_launcher"/>
                 </LinearLayout>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="健身设置"
+                android:textColor="?attr/colorPrimary"
+                android:layout_margin="@dimen/wh_14dp"
+               />
+
+
+            <com.balysv.materialripple.MaterialRippleLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:mrl_rippleOverlay="true"
+                app:mrl_rippleColor="?attr/colorPrimary"
+                android:background="@drawable/border_top_and_bottom"
+                >
+
+                <TextView
+                    android:id="@+id/tv_add_strength_project"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="添加健身项目"
+                    android:textSize="@dimen/ts_16sp"
+                    android:textColor="@color/black_31"
+                    android:layout_margin="@dimen/wh_14dp"
+                    />
+
+            </com.balysv.materialripple.MaterialRippleLayout>
 
         </LinearLayout>
 
-    </ScrollView>
+    </com.beiing.baseframe.widgets.ElasticLayout>
 
 
 
