--- a/app/src/main/res/layout/activity_strength.xml
+++ b/app/src/main/res/layout/activity_strength.xml
@@ -27,6 +27,8 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_strength_list"
+                android:fadingEdgeLength="0dp"
+                android:overScrollMode="never"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center" />
