--- a/app/src/main/res/layout/activity_add_project.xml
+++ b/app/src/main/res/layout/activity_add_project.xml
@@ -9,7 +9,7 @@
 
     <include layout="@layout/toolbar_layout"/>
 
-    <com.beiing.baseframe.widgets.ElasticLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -22,8 +22,8 @@
 
             <ImageView
                 android:id="@+id/iv_sample"
-                android:layout_width="@dimen/wh_150dp"
-                android:layout_height="@dimen/wh_150dp"
+                android:layout_width="@dimen/wh_100dp"
+                android:layout_height="@dimen/wh_100dp"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/icon_plus"/>
 
@@ -33,8 +33,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_projects"
+                android:layout_marginTop="@dimen/padding_margin_10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
         </LinearLayout>
 
-    </com.beiing.baseframe.widgets.ElasticLayout>
+    </ScrollView>
 
 </LinearLayout>
