--- a/app/src/main/res/layout/activity_add_strength.xml
+++ b/app/src/main/res/layout/activity_add_strength.xml
@@ -65,10 +65,11 @@
             <com.balysv.materialripple.MaterialRippleLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 app:mrl_rippleOverlay="true"
                 app:mrl_rippleColor="?attr/colorPrimary"
-                android:background="@drawable/border_bottom"
+                android:background="@drawable/border_top_and_bottom"
                 >
 
                 <TextView
