--- a/app/src/main/res/layout/item_strength.xml
+++ b/app/src/main/res/layout/item_strength.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/border_bottom"
+    android:paddingRight="@dimen/padding_margin_10dp"
     >
 
     <LinearLayout
@@ -17,6 +17,7 @@
             android:layout_width="@dimen/wh_11dp"
             android:layout_height="@dimen/wh_11dp"
             android:background="?attr/colorPrimary"/>
+
         <TextView
             android:id="@+id/tv_month"
             android:layout_width="wrap_content"
@@ -24,7 +25,7 @@
             android:layout_marginLeft="@dimen/padding_margin_8dp"
             android:text="10月"
             android:textSize="@dimen/ts_20sp"
-            android:textColor="@color/title_c1"
+            android:textColor="?attr/colorPrimary"
             android:textStyle="bold"/>
     </LinearLayout>
 
@@ -33,8 +34,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@drawable/border_bottom"
         android:layout_marginTop="@dimen/padding_margin_4dp"
-        android:layout_marginLeft="@dimen/padding_margin_24dp">
+        android:layout_marginLeft="@dimen/padding_margin_24dp"
+        android:padding="@dimen/padding_margin_8dp">
 
         <TextView
             android:id="@+id/tv_date"
