--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -98,7 +98,28 @@
                     android:id="@+id/tv_add_strength_project"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="添加健身项目"
+                    android:text="健身项目管理"
+                    android:textSize="@dimen/ts_16sp"
+                    android:textColor="@color/black_31"
+                    android:layout_margin="@dimen/wh_14dp"
+                    />
+
+            </com.balysv.materialripple.MaterialRippleLayout>
+
+            <com.balysv.materialripple.MaterialRippleLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:mrl_rippleOverlay="true"
+                app:mrl_rippleColor="?attr/colorPrimary"
+                android:background="@drawable/border_bottom"
+                >
+
+                <TextView
+                    android:id="@+id/tv_strength_plan_manage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="健身计划管理"
                     android:textSize="@dimen/ts_16sp"
                     android:textColor="@color/black_31"
                     android:layout_margin="@dimen/wh_14dp"
